tests/baselines/reference/classImplementsClass3.errors.txt
classImplementsClass3.ts(13,5): error TS2454: Variable 'c2' is used before being assigned.


==== classImplementsClass3.ts (1 errors) ====
    class A { foo(): number { return 1; } }
    class C implements A {
        foo() {
            return 1;
        }
    }
    
    class C2 extends A {}
    
    // no errors
    var c: C;
    var c2: C2;
    c = c2;
        ~~
!!! error TS2454: Variable 'c2' is used before being assigned.
    c2 = c;